[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc-codes"
version = "0.7.9"
description = "Python implementation and simulation of Low-Density Parity-Check (LDPC) codes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "pillow",
]

[tool.setuptools]
packages = ["ldpc"]
